2005-02-10  Bruno Haible  <bruno@clisp.org>

	* allocsa.h (sa_alignof): Define differently with AIX xlc, to avoid
	a bug of this compiler on AIX 3.2.5 dealing with enums.

2005-02-07  Bruno Haible  <bruno@clisp.org>

	* c-strcase.h: New file, based on strcase.h.
	* c-strcasecmp.c: New file, based on strcasecmp.c.
	* c-strncasecmp.c: New file, based on strcasecmp.c.
	* Makefile.am (libgettextlib_la_SOURCES): Add c-strcase.h,
	c-strcasecmp.c, c-strncasecmp.c.
	* Makefile.msvc (OBJECTS): Add c-strcasecmp.obj, c-strncasecmp.obj.
	(c-strcasecmp.obj, c-strncasecmp.obj): New rules.
	* Makefile.vms (OBJECTS): Add c-strcasecmp.obj, c-strncasecmp.obj.
	(c-strcasecmp.obj, c-strncasecmp.obj): New rules.

2005-01-29  Bruno Haible  <bruno@clisp.org>

	* progname.c (program_name): Initialize.
	Needed when linking statically on MacOS X.

2005-01-27  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (libgettextlib_la_SOURCES): Remove strtoul.c.
	(LIBADD_SOURCE): Add strtoul.c here.

2005-01-28  Bruno Haible  <bruno@clisp.org>

	* stpncpy.h (stpncpy): Define as a macro without arguments, so that
	stpncpy.c uses it.

2005-01-09  Bruno Haible  <bruno@clisp.org>

	* csharpcomp.sh.in (func_tmpdir): New function.
	(mcs invocation): Use it. Fix exit code.

2005-01-07  Bruno Haible  <bruno@clisp.org>

	* csharpcomp.c: Include safe-read.h.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* fwriteerror.h (fwriteerror): Change specification to include fclose.
	* fwriteerror.c: Include <stdbool.h>.
	(fwriteerror): At the end, close the file stream. Record whether
	stdout was already closed.
	* closeout.c: Update comments.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* strerror.c: Update from gnulib, with HAVE_STRERROR modifications.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* strtol.c: Update from gnulib.
	* strtoul.c: Update from gnulib.

2005-01-06  Bruno Haible  <bruno@clisp.org>

	* strstr.c: Update from gnulib.

2005-01-06  Bruno Haible  <bruno@clisp.org>
