@@ -1,3 +1,7 @@
+2005-02-12  Bruno Haible  <bruno@clisp.org>
+
+	* obstack.c: Update from current gnulib version.
+
 2005-02-10  Bruno Haible  <bruno@clisp.org>
 
 	* allocsa.h (sa_alignof): Define differently with AIX xlc, to avoid
